ajustes header y footer y añadir cards

--- a/base.html
+++ b/base.html
@@ -45,17 +45,7 @@
                     <a class="nav-link" href="#">Guias</a>
                 </li>
                 </ul>
-                <li class="nav-item dropdown  me-auto mb-2 mb-lg-0 user-icon">
-                    <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img src="user-interface.png" alt="user-interface" width="45" height="45" class="d-inline-block align-text-top">
-                      
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Iniciar Sesión</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Registrarse</a></li>
-                    </ul>
-                </li>
+                {% block login %} {% endblock %}
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
                     <button class="btn btn-outline-danger" type="submit">Search</button>
@@ -64,58 +54,9 @@
             </div>
         </nav>
     </header>
-
-    <!-- {% block content %} // cards boostrap 1. cards-group 2. card-deks-->
     <main class="main-content">
-        <section>
-
-            <div class="card-deck">
-                <a href="#" class="card-link">
-                    <div class="card">
-                            <img class="card-img-top" src="fifa23.jpeg" alt="Card image cap" width="250" height="350">
-                        <div class="card-body">
-                        <h5 class="card-title">Lanzamiento de FIFA 23</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </a>
-                <div class="card">
-                  <img class="card-img-top" src="https://picsum.photos/120/120" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
-                </div>
-
-
-                <div class="card-group">
-                    <div class="card carta1" style="width: 18rem;">
-                        <img class="card-img-top" src="https://picsum.photos/120/120" alt="Card image cap">
-                        <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                    <div class="card carta2" style="width: 18rem;">
-                        <img class="card-img-top" src="https://picsum.photos/120/120" alt="Card image cap">
-                        <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-              </div>
-
-
-        </section>
-
-
+        {% block content %} {% endblock %}
     </main>
-    <!-- {% endblock %} -->
 
     <footer class="footer-blog">
         <div class="footer-container1">
